[package]
name = "container"
version = "0.1.0"
authors = ["Yuval Dolev <yuvaldolev2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.44", features = ["backtrace"] } 
clap = "3.0.0-beta.4"
config = "0.11.0"
libc = "0.2.102"
nix = "0.22.1"
scopeguard = "1.1.0"
serde = "1.0.130"
serde_derive = "1.0.130"
tempfile = "3.2.0"
thiserror = "1.0.29"
uuid = { version = "0.8.2", features = ["v4"] }
